--- a/src/main/webapp/WEB-INF/views/user/userMain.html
+++ b/src/main/webapp/WEB-INF/views/user/userMain.html
@@ -8,7 +8,7 @@
 <a href="users" type="button">GetAllUser</a>
 <br>
 <br>
-<a href="/addUser" type="button">Add user</a>
+<a href="addUser" type="button">Add user</a>
 
 </body>
 </html>
